platform/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>VNET_Force_Password_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Force user to reset VNET portal password.</description>
        <inlineHelpText>When checked user must reset their VNET portal password.</inlineHelpText>
        <label>VNET Force Password Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VNET_Password_Hash__c</fullName>
        <description>Encrypted VNET user password hash value.</description>
        <inlineHelpText>Encrypted VNET user password hash value.</inlineHelpText>
        <label>VNET Password Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VNET_User_Status__c</fullName>
        <description>Operational status of a VNET user.</description>
        <inlineHelpText>Operational status of a VNET user.</inlineHelpText>
        <label>VNET User Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VNET_User_Type__c</fullName>
        <description>The VNET user&apos;s operational type.</description>
        <inlineHelpText>The VNET user&apos;s operational type.</inlineHelpText>
        <label>VNET User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>